# SkeletalAnimation

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
resources/: FragmentShader.glsl  FragmentShader.glsl.h  FragmentShader.spv.h  StandardFragmentShader.glsl  StandardFragmentShader.glsl.h  StandardFragmentShader.spv.h  StandardVertexShader.glsl  StandardVertexShader.glsl.h  StandardVertexShader.spv.h  Texture.png.h  VertexShader.glsl  VertexShader.glsl.h  VertexShader.spv.h
src/: Buffer.h  IndexBuffer.cpp  IndexBufferOpenGL.cpp  IndexBufferOpenGL.h  Material.cpp  Mesh.cpp  MeshData.cpp  MeshData.h  Renderer.cpp  Renderer.h  RendererOpenGL.cpp  RendererOpenGL.h  Shader.h  ShaderOpenGL.cpp  ShaderOpenGL.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexArrayObjectOpenGL.cpp  VertexArrayObjectOpenGL.h  VertexBufferObject.cpp  VertexBufferObject.h  VertexBufferObjectOpenGL.cpp  VertexBufferObjectOpenGL.h  Window.cpp  Window.h
src/buffer/: Buffer.h  IndexBuffer.h  VertexArrayObject.h  VertexBufferObject.h
src/buffer/opengl/: IndexBufferOpenGL.h  VertexArrayObjectOpenGL.cpp  VertexArrayObjectOpenGL.h  VertexBufferObjectOpenGL.cpp  VertexBufferObjectOpenGL.h
src/buffer/vulkan/: IndexBufferVulkan.cpp  IndexBufferVulkan.h  VertexArrayObjectVulkan.cpp  VertexArrayObjectVulkan.h  VertexBufferObjectVulkan.cpp  VertexBufferObjectVulkan.h  VulkanBuffer.cpp  VulkanBuffer.h
src/material/: Material.cpp  Material.h
src/material/shader/: Shader.cpp  Shader.h  Uniform.cpp  Uniform.h
src/material/shader/opengl/: ShaderOpenGL.cpp  ShaderOpenGL.h  UniformOpenGL.cpp  UniformOpenGL.h
src/material/shader/vulkan/: ShaderVulkan.cpp  ShaderVulkan.h  UniformVulkan.cpp  UniformVulkan.h
src/material/texture/: Texture.cpp  Texture.h
src/material/texture/opengl/: TextureOpenGL.cpp  TextureOpenGL.h
src/material/texture/vulkan/: TextureVulkan.cpp  TextureVulkan.h
src/mesh/: Bone.cpp  Bone.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  Scene.cpp  Scene.h
src/renderer/: Renderer.cpp  Renderer.h
src/renderer/opengl/: RendererOpenGL.cpp  RendererOpenGL.h
src/renderer/vulkan/: CommandPool.cpp  CommandPool.h  DepthTexture.cpp  DepthTexture.h  DeviceExtensions.cpp  DeviceExtensions.h  Framebuffer.cpp  Framebuffer.h  Framebuffers.cpp  Framebuffers.h  ImageView.cpp  ImageView.h  ImageViews.cpp  ImageViews.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  QueueFamily.cpp  QueueFamily.h  RenderPass.cpp  RenderPass.h  RenderSurface.cpp  RenderSurface.h  RendererVulkan.cpp  RendererVulkan.h  SwapChain.cpp  SwapChain.h  SyncObjects.cpp  SyncObjects.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h
src/scene/: Bone.cpp  Bone.h  Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  Scene.cpp  Scene.h
src/scene/animation/: Animation.cpp  Animation.h  AnimationClip.cpp  AnimationClip.h  Interpolation.cpp  Interpolation.h
src/timer/: Timer.cpp  Timer.h
src/window/: Window.cpp  Window.h
